--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,13 +10,14 @@
         {% endif %}
         <form action="{{ path('app_login') }}" method="post">
             <div>
-                <label for="username">Email</label>
-                <input type="text" id="username" name="_username" value="{{ last_username }}" required autofocus>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" value="{{ last_username }}" required autofocus>
             </div>
             <div>
                 <label for="password">Mot de passe</label>
-                <input type="password" id="password" name="_password" required>
+                <input type="password" id="password" name="password" required>
             </div>
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
             <div>
                 <button type="submit">Se connecter</button>
             </div>
