--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}Mon Site{% endblock %}</title>
-        <link href="{{ asset('build/app.css') }}" rel="stylesheet">
-        {% block stylesheets %}
-        {% endblock %}
-    </head>
-    <body>
-        <nav>
-            <ul>
-                {% if app.user %}
-                    <li>
-                        {{ app.user.email }} | 
-                        <a href="{{ path('app_logout') }}">Déconnexion</a>
-                    </li>
-                {% endif %}
-                <!-- Ajoutez d'autres liens ici si nécessaire -->
-            </ul>
-        </nav>
-        {% block body %}{% endblock %}
-        {% block javascripts %}
-        {% endblock %}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Mon Site{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ asset('build/app.css') }}" rel="stylesheet">
+    {% block stylesheets %}
+    {% endblock %}
+</head>
+<body>
+<header>
+    {% include '_nav.html.twig' %}
+</header>
+<main>
+    {% block body %}{% endblock %}
+</main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+{% block javascripts %}
+{% endblock %}
+</body>
 </html>
