--- a/templates/newsletter/subscribe.html.twig
+++ b/templates/newsletter/subscribe.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Newsletter - Inscription{% endblock %}
 
 {% block body %}
-    <div class="min-h-screen bg-gray-100 flex flex-col justify-center py-12 sm:px-6 lg:px-8">
-        <div class="sm:mx-auto sm:w-full sm:max-w-md">
-            <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+    <div class="min-h-screen bg-gray-100 py-12 px-3 sm:px-6 lg:px-8">
+        <div class="max-w-3xl mx-auto mb-3">
+            <h2 class="text-2xl font-bold text-gray-900" >
                 Inscription à la newsletter
             </h2>
             
@@ -19,24 +19,19 @@
             {% endfor %}
         </div>
 
-        <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
-            <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-                {{ form_start(form, {'attr': {'class': 'space-y-6'}}) }}
-                    <div>
-                        {{ form_label(form.email, 'Adresse email', {'label_attr': {'class': 'block text-sm font-medium text-gray-700'}}) }}
-                        <div class="mt-1">
-                            {{ form_widget(form.email, {'attr': {'class': 'appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm'}}) }}
-                        </div>
-                        {{ form_errors(form.email) }}
-                    </div>
-
-                    <div>
-                        <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                            S'inscrire
-                        </button>
-                    </div>
-                {{ form_end(form) }}
+        <div class="bg-white py-6">
+            {{ form_start(form, {'attr': {'class': 'space-y-4'}}) }}
+            <div>
+                {{ form_label(form.email, 'Adresse email', {'label_attr': {'class': 'block text-sm font-medium text-gray-700'}}) }}
+                {{ form_widget(form.email, {'attr': {'class': 'block w-full border border-gray-300 rounded-md py-2 px-3 shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500'}}) }}
+                {{ form_errors(form.email) }}
             </div>
+            <div>
+                <button type="submit" class="bg-indigo-600 text-black py-2 px-4 hover:bg-indigo-700 hover:text-white">
+                    S'inscrire
+                </button>
+            </div>
+            {{ form_end(form) }}
         </div>
     </div>
 {% endblock %}
