--- a/templates/newsletter_admin/_form.html.twig
+++ b/templates/newsletter_admin/_form.html.twig
@@ -1,4 +1,29 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <div>
+        {{ form_label(form.subject, null, {'label_attr': {'class': 'block text-sm font-medium text-gray-700'}}) }}
+        <div class="mt-1 mb-4">
+            {{ form_widget(form.subject, {'attr': {'class': 'appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm'}}) }}
+        </div>
+        {{ form_errors(form.subject) }}
+    </div>
+
+    <div>
+        {{ form_label(form.content, null, {'label_attr': {'class': 'block text-sm font-medium text-gray-700'}}) }}
+        <div class="mt-1 mb-4">
+            {{ form_widget(form.content, {'attr': {'class': 'appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm'}}) }}
+        </div>
+        {{ form_errors(form.content) }}
+    </div>
+    <div class="flex justify-between">
+        <div>
+            <button  type="submit" class="mr-3 inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+                {{ button_label|default('Save') }}
+            </button>
+            <button type="button" id="back" class="mr-3 inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+                <a href="{{ path('app_newsletter_admin_index') }}" style="text-decoration: none;">
+                    Retour à la liste
+                </a>
+            </button>
+        </div>
+    </div>
 {{ form_end(form) }}
