--- a/templates/newsletter_admin/edit.html.twig
+++ b/templates/newsletter_admin/edit.html.twig
@@ -3,11 +3,15 @@
 {% block title %}Edit Newsletter{% endblock %}
 
 {% block body %}
-    <h1>Edit Newsletter</h1>
+<div class="min-h-screen bg-gray-100 py-12 px-3 sm:px-6 lg:px-8">
+    <div class="max-w-3xl mx-auto mb-3">
+        <h2>Edit Newsletter</h2>
 
-    {{ include('newsletter_admin/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('newsletter_admin/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_newsletter_admin_index') }}">back to list</a>
+        {{ include('newsletter_admin/_delete_form.html.twig') }}
+    </div>
 
-    {{ include('newsletter_admin/_delete_form.html.twig') }}
+
+</div>
 {% endblock %}
