--- a/templates/newsletter_admin/show.html.twig
+++ b/templates/newsletter_admin/show.html.twig
@@ -3,36 +3,52 @@
 {% block title %}Newsletter{% endblock %}
 
 {% block body %}
-    <h1>Newsletter</h1>
+<div class="min-h-screen bg-gray-100 py-12 px-3 sm:px-6 lg:px-8">
+    <div class="max-w-3xl mx-auto mb-3">
+        <h1>Newsletter</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ newsletter.id }}</td>
-            </tr>
-            <tr>
-                <th>Subject</th>
-                <td>{{ newsletter.subject }}</td>
-            </tr>
-            <tr>
-                <th>Content</th>
-                <td>{{ newsletter.content }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ newsletter.createdAt ? newsletter.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>IsSent</th>
-                <td>{{ newsletter.isSent ? 'Yes' : 'No' }}</td>
-            </tr>
-        </tbody>
-    </table>
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th>Id</th>
+                    <td>{{ newsletter.id }}</td>
+                </tr>
+                <tr>
+                    <th>Subject</th>
+                    <td>{{ newsletter.subject }}</td>
+                </tr>
+                <tr>
+                    <th>Content</th>
+                    <td>{{ newsletter.content }}</td>
+                </tr>
+                <tr>
+                    <th>CreatedAt</th>
+                    <td>{{ newsletter.createdAt ? newsletter.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                </tr>
+                <tr>
+                    <th>IsSent</th>
+                    <td>{{ newsletter.isSent ? 'Yes' : 'No' }}</td>
+                </tr>
+            </tbody>
+        </table>
 
-    <a href="{{ path('app_newsletter_admin_index') }}">back to list</a>
 
-    <a href="{{ path('app_newsletter_admin_edit', {'id': newsletter.id}) }}">edit</a>
+        <div class="flex justify-between">
+            <div>
+                <button class="mr-3 inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+                    <a href="{{ path('app_newsletter_admin_edit', {'id': newsletter.id}) }}" style="text-decoration: none;">
+                        edit
+                    </a>
+                </button>
+                <button id="back" class="mr-3 inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+                    <a href="{{ path('app_newsletter_admin_index') }}" style="text-decoration: none;">
+                        Retour à la liste
+                    </a>
+                </button>
+                {{ include('newsletter_admin/_delete_form.html.twig') }}
+            </div>
+        </div>
 
-    {{ include('newsletter_admin/_delete_form.html.twig') }}
+    </div>
+</div>
 {% endblock %}
