--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,24 +3,33 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
-    <div>
-        <h2>Connexion</h2>
+    <div class="min-h-screen bg-gray-100 py-12 px-3 sm:px-6 lg:px-8 mb-3">
+        <div class="max-w-3xl mx-auto mb-3">
+            <h2>Connexion</h2>
+        </div>
+
+    <div class="bg-white py-6">
         {% if error %}
             <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
-        <form action="{{ path('app_login') }}" method="post">
-            <div>
+        <form action="{{ path('app_login') }}" class="space-y-4" method="post">
+            <div class="mb-2">
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" value="{{ last_username }}" required autofocus>
+                <input type="email" id="email" name="email" value="{{ last_username }}" required autofocus
+                        class="block w-full border border-gray-300 rounded-md py-2 px-3 shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
             </div>
-            <div>
+            <div class="mb-2">
                 <label for="password">Mot de passe</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" required
+                       class="block w-full border border-gray-300 rounded-md py-2 px-3 shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
             </div>
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
             <div>
-                <button type="submit">Se connecter</button>
+                <button type="submit" class="mr-3 inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+                    Se connecter
+                </button>
             </div>
         </form>
+    </div>
     </div>
 {% endblock %} 
