--- a/templates/newsletter_admin/show.html.twig
+++ b/templates/newsletter_admin/show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="min-h-screen bg-gray-100 py-12 px-3 sm:px-6 lg:px-8">
     <div class="max-w-3xl mx-auto mb-3">
-        <h1>Newsletter</h1>
+        <h2>Newsletter</h2>
 
         <table class="table">
             <tbody>
@@ -37,7 +37,7 @@
             <div>
                 <button class="mr-3 inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
                     <a href="{{ path('app_newsletter_admin_edit', {'id': newsletter.id}) }}" style="text-decoration: none;">
-                        edit
+                        Editer
                     </a>
                 </button>
                 <button id="back" class="mr-3 inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
