--- a/templates/newsletter_admin/_delete_form.html.twig
+++ b/templates/newsletter_admin/_delete_form.html.twig
@@ -1,6 +1,6 @@
-<form method="post" action="{{ path('app_newsletter_admin_delete', {'id': newsletter.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_newsletter_admin_delete', {'id': newsletter.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette newsletter ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ newsletter.id) }}">
     <button class="mr-3 mt-2 inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
-        Delete
+        Supprimer
     </button>
 </form>
