--- a/templates/subscriber/_delete_form.html.twig
+++ b/templates/subscriber/_delete_form.html.twig
@@ -1,6 +1,6 @@
 <form method="post" action="{{ path('app_subscriber_delete', {'id': subscriber.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet abonné ?');" class="inline-block">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ subscriber.id) }}">
-    <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700">
+    <button class="mr-3 mt-2 inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
         Supprimer
     </button>
 </form>
