--- a/templates/subscriber/_form.html.twig
+++ b/templates/subscriber/_form.html.twig
@@ -1,7 +1,7 @@
 {{ form_start(form, {'attr': {'class': 'space-y-6'}}) }}
     <div>
         {{ form_label(form.email, 'Adresse email', {'label_attr': {'class': 'block text-sm font-medium text-gray-700'}}) }}
-        <div class="mt-1">
+        <div class="mt-1 mb-4">
             {{ form_widget(form.email, {'attr': {'class': 'appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm'}}) }}
         </div>
         {{ form_errors(form.email) }}
@@ -9,15 +9,22 @@
 
     <div>
         {{ form_label(form.createAt, 'Date d\'inscription', {'label_attr': {'class': 'block text-sm font-medium text-gray-700'}}) }}
-        <div class="mt-1">
+        <div class="mt-1 mb-4">
             {{ form_widget(form.createAt, {'attr': {'class': 'appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm'}}) }}
         </div>
         {{ form_errors(form.createAt) }}
     </div>
 
-    <div>
-        <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white {{ button_class|default('bg-indigo-600 hover:bg-indigo-700') }} focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-            {{ button_label|default('Enregistrer') }}
-        </button>
+    <div class="flex justify-between">
+        <div>
+            <button type="submit" class="mr-3 inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50" >
+                {{ button_label|default('Enregistrer') }}
+            </button>
+            <button type="button" id="back" class="mr-3 inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+                <a href="{{ path('app_newsletter_admin_index') }}" style="text-decoration: none;">
+                    Retour à la liste
+                </a>
+            </button>
+        </div>
     </div>
 {{ form_end(form) }}
