--- a/templates/subscriber/show.html.twig
+++ b/templates/subscriber/show.html.twig
@@ -3,36 +3,45 @@
 {% block title %}Détails de l'abonné{% endblock %}
 
 {% block body %}
-    <div class="min-h-screen bg-gray-100 py-12 px-4 sm:px-6 lg:px-8">
-        <div class="max-w-3xl mx-auto">
-            <div class="bg-white shadow overflow-hidden sm:rounded-lg">
-                <div class="px-4 py-5 sm:px-6">
-                    <h1 class="text-2xl font-bold text-gray-900">Détails de l'abonné</h1>
-                </div>
-                
-                <div class="border-t border-gray-200">
-                    <dl>
-                        <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                            <dt class="text-sm font-medium text-gray-500">ID</dt>
-                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">{{ subscriber.id }}</dd>
-                        </div>
-                        <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                            <dt class="text-sm font-medium text-gray-500">Email</dt>
-                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">{{ subscriber.email }}</dd>
-                        </div>
-                        <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                            <dt class="text-sm font-medium text-gray-500">Date d'inscription</dt>
-                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">{{ subscriber.createAt ? subscriber.createAt|date('Y-m-d H:i:s') : '' }}</dd>
-                        </div>
-                    </dl>
+    <div class="min-h-screen bg-gray-100 py-12 px-3 sm:px-6 lg:px-8">
+        <div class="max-w-3xl mx-auto mb-3">
+            <h2>Détails de l'abonné</h2>
+
+            <table class="table">
+                <tbody>
+                <tr>
+                    <th>Id</th>
+                    <td>{{ subscriber.id }}</td>
+                </tr>
+                <tr>
+                    <th>Email</th>
+                    <td>{{ subscriber.email }}</td>
+                </tr>
+                <tr>
+                    <th>Date d'inscription</th>
+                    <td>{{ subscriber.createAt ? subscriber.createAt|date('Y-m-d H:i:s') : '' }}</td>
+                </tr>
+                </tbody>
+            </table>
+
+
+            <div class="flex justify-between">
+                <div>
+                    <button class="mr-3 inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+                        <a href="{{ path('app_subscriber_edit', {'id': subscriber.id}) }}" style="text-decoration: none;">
+                            Editer
+                        </a>
+                    </button>
+                    <button id="back" class="mr-3 inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+                        <a href="{{ path('app_newsletter_admin_index') }}" style="text-decoration: none;">
+                            Retour à la liste
+                        </a>
+                    </button>
+                    {{ include('subscriber/_delete_form.html.twig') }}
                 </div>
             </div>
+
         </div>
+
     </div>
-
-    <a href="{{ path('app_subscriber_index') }}">back to list</a>
-
-    <a href="{{ path('app_subscriber_edit', {'id': subscriber.id}) }}">edit</a>
-
-    {{ include('subscriber/_delete_form.html.twig') }}
 {% endblock %}
